# polyreactivity

./: .gitignore  BOUGHTER_CURATION.md.txt  Dockerfile  MODEL_CARD.md  Makefile  PAPER.md  README.md  REPLICATION_REPORT.md  pyproject.toml  requirements.txt
artifacts/: ci_model.joblib
artifacts/ci_bench2/: metrics.csv  preds.csv  train_in_sample.json
artifacts/ci_run/: metrics.csv  model.joblib  preds.csv  preds_cli.csv  train_in_sample.json
artifacts/concat/: metrics.csv  model.joblib  preds.csv
artifacts/full/: jain_preds.csv  metrics.csv  model.joblib  preds.csv
artifacts/full_counts/: preds.csv
artifacts/paper/: lofo_metrics.csv
artifacts/replication/: metrics.csv  model.joblib  preds.csv
artifacts/replication_boughter_s1s2/: metrics.csv  model.joblib  preds.csv
artifacts/replication_counts/: cv_metrics_per_fold.csv  cv_metrics_summary.csv  metrics.csv  model.joblib
artifacts/replication_counts_human_lineage/: metrics.csv
artifacts/replication_counts_nodedup/: metrics.csv  model.joblib  preds.csv
artifacts/replication_counts_rebuilt/: metrics.csv  (+1 more)
configs/: demo.yaml  no_calibration.yaml  plm_c01.yaml  plm_mean_nostd.yaml
polyreact/: __init__.py  api.py  config.py  predict.py  train.py
scripts/: prepare_datasets.py  rebuild_boughter_from_counts.py  rebuild_shehata_psr.py
space/: README.md  app.py  deploy.py  runtime.yaml
tests/: test_anarsi.py  test_api_predict.py  test_data_loaders.py  test_descriptors.py  test_feature_pipeline.py  test_linear_head.py  test_metrics.py  test_ordinal.py  test_plm_cache.py  test_rebuild_shehata.py
(+368 files in other folders)
